# Gauntlet

./: .gitignore  Dockerfile  README.md  WRITEUP.md  blog.md  openenv.yaml  pyproject.toml
delegation_gauntlet/: __init__.py  client.py  models.py
delegation_gauntlet/environment/: __init__.py  adversary.py  boss.py  inbox.py  openenv_env.py  reward.py  scenario.py  tools.py  world.py
delegation_gauntlet/server/: app.py
public/metrics/: smoke_metrics.json  training_series.json
spaces/: app.py
tests/: test_env.py
training/: train_grpo.py
